# contract-intelligence-engine

./: .gitignore  docker-compose.yml  seed_clauses.py
.github/workflows/: evals.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py  observability.py
backend/app/db/: embeddings.py  postgres.py
backend/app/graph/: graph.py  router.py  state.py
backend/app/graph/nodes/: clause_extractor.py  precedent_retriever.py  risk_scorer.py
backend/app/models/: __init__.py  contract.py  risk.py
backend/mcp_server/: server.py
evals/: eval_deterministic.py  eval_llm_judge.py  ground_truth.json  run_evals.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/contracts/[id]/: page.tsx
frontend/components/: ClauseTable.tsx  ContractUploader.tsx  EscalationBanner.tsx  GraphProgress.tsx  RiskGauge.tsx
tools/: Cargo.toml  clause_hasher.rs
