[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contract-intelligence-engine"
version = "0.1.0"
description = "Autonomous legal-risk analyst for early-stage SaaS contracts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # API layer
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",

    # AI orchestration
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.6",
    "pydantic-ai==1.11.0",

    # MCP
    "fastmcp>=2.12.0",
    "mcp>=1.8.0",

    # Database
    "asyncpg>=0.30.0",
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.5",

    # Google AI (Gemini + embeddings)
    "google-generativeai>=0.8.4",

    # Observability
    "logfire[fastapi,asyncpg]>=3.8.0",

    # PDF parsing
    "pypdf>=5.1.0",

    # Pydantic
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
seed = [
    "datasets>=3.2.0",        # HuggingFace CUAD
    "tqdm>=4.67.0",
]
evals = [
    "datasets>=3.2.0",
    "rich>=13.9.0",
    "tabulate>=0.9.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "mcp_server"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
