[package]
name = "clause_hasher"
version = "0.1.0"
edition = "2021"
description = "Deterministic SHA-256 content-addressable hasher for contract clause deduplication"
authors = ["Contract Intelligence Engine"]

# Performance optimization: target native CPU for maximum SHA-256 throughput
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "clause_hasher"
path = "clause_hasher.rs"

[dependencies]
sha2 = "0.10"
clap = { version = "4.5", features = ["derive"] }
